2009-11-25  Stuart Cassoff <stwo@users.sf.net>

	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
	*			AC_STRUCT_TIMEZONE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-24  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2902814]: Use the correct
	type for the array of data passed into X. It's wrong, but "right"
	because of a mistake in the X11 specification.

2009-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winWm.test: [Bug 2899949]: Make sure the window is still
	* win/tkWinWm.c:    present when handling delayed activation

2009-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDialog.test: [Bug 2307837]: Backported fix for running
	* win/tkWinTest.c:      dialog tests on non-English locales

2009-11-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.8 release.

2009-11-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.8 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updated for 8.5.8 release.

2009-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: [Bug 2891541]: Permit normal behaviour on
	Windows for a grabbed toplevel when it is the main window.

2009-11-01  Joe Mistachkin  <joe@mistachkin.com>

	* win/tkWinButton.c: [Bug 1739613]: The default width being stored
	in TSD cannot be put into the process-wide options table.  This fix
	allocates storage for the default width from the heap and frees it
	using an exit handler.

2009-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinFont.c: [Bug 1825353]: Backported patch for tiny
	fixed font on Russian Windows systems.

2009-10-25  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixColor.c (TkpGetColor): [Bug 2809525]: Impose a maximum