@@ -2,7 +2,7 @@
 '\" Copyright (c) 1998-2000 by Scriptics Corporation.
 '\" All rights reserved.
 '\" 
-'\" RCS: @(#) $Id: GetHINSTANCE.3,v 1.2 2002/11/15 15:35:55 dkf Exp $
+'\" RCS: @(#) $Id: GetHINSTANCE.3,v 1.2.10.1 2009/12/02 22:20:01 nijtmans Exp $
 '\" 
 .so man.macros
 .TH Tk_GetHISTANCE 3 "" Tk "Tk Library Procedures"
@@ -11,16 +11,14 @@
 Tk_GetHINSTANCE \- retrieve the global application instance handle
 .SH SYNOPSIS
 .nf
-\fB#include <tk.h>\fR
+\fB#include <tkPlatDecls.h>\fR
 .sp
 HINSTANCE
 \fBTk_GetHINSTANCE\fR()
 .BE
-
 .SH DESCRIPTION
 .PP
 \fBTk_GetHINSTANCE\fR returns the Windows application instance handle
 for the Tk application.  This function is only available on Windows platforms.
-
 .SH KEYWORDS
 identifier, instance
